feat: Add SEO configurations including robots.txt and meta tags, and enhance API security and performance with .htaccess.

--- a/cpd-portal/src/index.html
+++ b/cpd-portal/src/index.html
@@ -1,13 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>CpdPortal</title>
+  <title>CPD Training Portal - MOT Tester Annual Training & Certification</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="Complete your annual MOT tester CPD training requirements online. Track progress, access comprehensive training materials, and manage your professional development certification.">
+  <meta name="keywords"
+    content="MOT training, CPD, continuous professional development, tester certification, annual training, vehicle testing">
+  <meta name="theme-color" content="#1976d2">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
